test/negative/unknown-keyword.cfr
// Negative behavioral clafer test for unknown operator 

a
 b ?
  c ?
 [temp c]
